v8/tests/messages/builtin.out
builtin.js:2: Uncaught SyntaxError: Unexpected token %
  return %StringEquals("a", "b");
         ^
