v8/tests/messages/builtin.js
function Test() {
  return %StringEquals("a", "b");
}
